# FerrisChat

./: Cargo.toml  README.md  ROADMAP.md
docs/: README.md
ferrischat_client/: Cargo.toml
ferrischat_client/src/: entrypoint.rs
ferrischat_db/: Cargo.toml
ferrischat_db/src/: lib.rs
ferrischat_models/: Cargo.toml
ferrischat_server/: Cargo.toml
ferrischat_server/src/: entrypoint.rs  lib.rs
ferrischat_server/src/authentication/: login_user.rs  logout_user.rs  mod.rs
ferrischat_server/src/channels/: delete_channel.rs  mod.rs
ferrischat_server/src/guilds/: delete_guild.rs  mod.rs
ferrischat_server/src/members/: create_member.rs  delete_member.rs  get_member.rs  mod.rs
ferrischat_server/src/messages/: delete_message.rs  get_messages.rs  mod.rs  send_message.rs
ferrischat_server/src/servers/: create_guild.rs  mod.rs
ferrischat_server/src/users/: create_user.rs  delete_user.rs  get_user.rs  mod.rs
