[package]
name = "ferrischat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "ferrischat_client",
  "ferrischat_server"
]

[dependencies]
ferrischat_client = { path = "ferrischat_client" }
ferrischat_server = { path = "ferrischat_server" }
